test/files/neg/t2973.check
t2973.scala:1: error: ';' expected but 'package' found.
package foo {} package bar {}
               ^
one error found